# ai-event-monitor

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2baf251e21a9_add_analyzis_result.py
scripts/: create_topics.py  send_message.py
services/analyzer/: app.py  criteria.py  handlers.py  llm.py  prompts.py  schemas.py
services/api/: deps.py  main.py  schemas.py
services/api/routers/: analysis_results.py  messages.py
services/history/: handlers.py
shared/: config.py
shared/db/: engine.py  session.py  tables.py
shared/kafka/: __init__.py  broker.py  topics.py
shared/models/: events.py
