[project]
name = "ai-event-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.14.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "faststream[kafka]>=0.7.1",
    "pydantic-ai>=2.5.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
]
